--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.2",
+    "@codechem/chakra-ui-animations": "^1.0.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/nunito-sans": "^4.5.10",
+    "currency.js": "^2.0.4",
+    "framer-motion": "^6.5.1",
+    "html-entities": "^2.3.3",
+    "lodash": "^4.17.21",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-countdown": "^2.3.5",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "sass": "^1.56.2",
+    "swiper": "^8.4.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
